test/parse/expr/bad-const-f32-trailing.txt
;;; ERROR: 1
(module (func f32.const 1234.5678foo))
(;; STDERR ;;;
out/test/parse/expr/bad-const-f32-trailing.txt:2:25: unexpected token "1234.5678foo"
(module (func f32.const 1234.5678foo))
                        ^^^^^^^^^^^^
out/test/parse/expr/bad-const-f32-trailing.txt:2:37: syntax error, unexpected ), expecting NAT or INT or FLOAT
(module (func f32.const 1234.5678foo))
                                    ^
;;; STDERR ;;)
